# sensecap-indicator-ha

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TASKS.md  build.sh  dev  dev.bat  sdkconfig.defaults
.claude/skills/: sim-preview.md
.github/workflows/: ci.yml
click_deploy/: README.md  sync_from_build.sh
click_deploy/macos_linux/: flash_all.sh  flash_esp32s3.sh  flash_rp2040.sh  install.sh
click_deploy/windows/: flash_all.ps1  flash_esp32s3.ps1  flash_rp2040.ps1
components/bsp/include/: bsp_lcd.h
components/bsp/src/boards/: sensecap_indicator_board.c
components/bsp/src/calibration/: touch_calibration.c
components/bsp/src/peripherals/: bsp_lcd.c
components/lora/: sx126x_sensecap_board.c
docs/: phase1_lvgl_migration.md  render-pipeline.md
docs/superpowers/plans/: 2026-05-27-esp32s3-agent-driven-stage1.md  2026-05-27-rp2040-compatible-protocol.md
docs/superpowers/specs/: 2026-05-27-esp32s3-agent-driven-improvements-design.md
examples/homeassistant/: dashboard.yaml  mqtt-entities.yaml
main/: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  dashboard_config.example.h  dashboard_config.h  home_assistant_config.h  idf_component.yml  indicator_enabler.h  indicator_model.c  indicator_view.c  lv_port.c  lv_port.h  main.c  view_data.h  view_data_types.h
main/app/: AGENTS.md  esp32_rp2040.c  esp32_rp2040.h  indicator_btn.c  indicator_btn.h  indicator_cmd.c  indicator_cmd.h  indicator_display.h  indicator_display_model.c  indicator_display_view.c  indicator_ha.h  indicator_ha_model.c  indicator_ha_view.c  indicator_mqtt.c  indicator_mqtt.h  indicator_sensor.h  indicator_sensor_model.c  indicator_sensor_view.c  indicator_storage_nvs.c  indicator_storage_nvs.h  indicator_wifi.h  indicator_wifi_model.c  indicator_wifi_view.c
main/assets/: ui_font_font0.c  ui_font_font2.c  ui_font_mdi_32.c  ui_font_mdi_48.c  ui_img_ic_co2_png.c  ui_img_ic_hum_png.c  ui_img_ic_switch1_off_png.c  ui_img_ic_switch1_on_png.c  ui_img_ic_switch2_off_png.c  ui_img_ic_switch2_on_png.c  ui_img_ic_temp_png.c  ui_img_ic_tvoc_png.c  ui_img_lock_png.c  ui_img_wifi_1_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_disconet_png.c
main/btn/: btn.c  btn.h
main/cmd/: cmd.c  cmd.h
main/display/: README.md  display.h  display_model.c  display_model.h  display_view.c  display_view.h
main/ha/: README.md  ha.h  ha_config.c  ha_config.h  ha_dash.c  ha_dash.h  ha_dash_home_screen.c  ha_dash_home_screen.h  ha_dash_room_screen.c  ha_dash_room_screen.h  ha_history.c  ha_history.h  ha_mqtt.c  ha_mqtt.h  ha_sensor.c  ha_sensor.h  ha_siren.c  ha_siren.h  ha_switch.c  ha_switch.h  ha_switch_screen.c  ha_switch_screen.h  ha_tls.c  ha_tls.h  ha_trend_screen.c  ha_trend_screen.h  ha_ws.c  ha_ws.h  ha_ws_config.c  ha_ws_config.h  ha_ws_status_screen.c  ha_ws_status_screen.h
main/mqtt/: mqtt.c  mqtt.h
main/nav/: nav.c  nav.h
main/rp2040/: rp2040.c  rp2040.h
main/sensor/: README.md  sensor.h  sensor_model.c  sensor_model.h  sensor_view.c  sensor_view.h
main/settings/: settings.h  settings_view.c  settings_view.h
main/storage/: storage_nvs.c  storage_nvs.h
main/ui/: ui_components.c  ui_components.h  ui_events.c  ui_helpers.c  ui_helpers.h  ui_icons.h  ui_theme.c  ui_theme.h
main/ui/screens/: ui_screen_broker.c
main/util/: indicator_util.c  indicator_util.h
main/wifi/: README.md  wifi.h  wifi_connect_screen.c  wifi_connect_screen.h  wifi_list_screen.c  wifi_list_screen.h  wifi_model.c  wifi_model.h  wifi_view.c  wifi_view.h
rp2040/: README.md  platformio.ini  rp2040.ino  sensors.ino
rp2040/include/: indicator_rp2040.hpp
rp2040/src/: main.cpp  sensors.cpp  utility.cpp
scripts/: architecture_scan.py  convert_squareline_assets_to_lvgl9.py  dev.py  dev_check.py  gen_mdi_font.py  new_page.sh  test_click_deploy_package.py  test_dev_cli.py  test_ha_switch_protocol.py  test_lcd_rgb_config.py  test_ui_geometry.py  verify_rp2040_protocol.py
sim/: CMakeLists.txt  lv_conf.h  lv_port_sim.c  lv_port_sim.h  main.c
sim/mock/: mock_sensors.c  mock_sensors.h
sim/stubs/: display_model_stub.c  esp_err.h  esp_event.h  esp_event_base.h  esp_event_stub.c  esp_log.h  esp_netif.h  esp_timer.h  ha_cfg_stub.c  ha_ws_stub.c  ha_ws_stub.h  indicator_util_stub.c  mqtt.h  nvs.h  nvs_flash.h  sdkconfig.h  sensor_model_stub.c  sensor_model_stub.h  storage_nvs.h
sim/stubs/freertos/: FreeRTOS.h  semphr.h  task.h
